# smart-contract

./: .gitignore  .pre-commit-config.yaml  PYCHARM_TUTORIAL.md  README.md  Step_by_Step.md  Thirty.txt  admin_wallet.json  analysis.md  argo.md  authentication.md  azure_docker_compose_tutorial.md  backend.Dockerfile  check_admin_role.py  create_db.py  database.sql  db.sqlite3  diagram.uml  diploma_provisioning_requirements.md  docker-compose-local-prod.yml  docker-compose-local.yml  docker-compose.yml  docker_compose_azure_copy.yml  entrypoint.sh  fake_data.sql  ganache.Dockerfile  ganache_keys  generate_issuer_wallet.py  get_cert_details.py  ipfs.Dockerfile  license.md  manage.py  package-lock.json  package.json  pyproject.toml  redis.conf  refined_requirements.md  requirements.md  requirements.txt  requirements_certificates.md  requirements_certificates_access.md  (+11 more)
app/: __init__.py  anto.txt  anto1.txt  anto2.txt  anto3.txt  anto4.txt  anto5.txt  anto6.txt  environment.py  esti.txt  estudi.txt  estudi1.txt  init_admin_and_verifier.py  logged.txt  middleware.py  models.py  onchain.txt  settings.py  urls.py  views.py  wallet_addresses.txt
app/api/: api.py  (+8 more)
contracts/: AccessControl.txt  CertificateRegistry.abi  CertificateRegistry.sol  CertificateRegistry.txt  ERC165.txt  IAccessControl.txt  IERC165.txt  Lock.txt
docker/: ganache.Dockerfile
frontend/: .gitignore  Blockchain_Certificate_Verification_Documentation.tex  frontend.Dockerfile  frontend.Dockerfile.prod  package-lock.json  package.json  tsconfig.json
k8s/: backend-deployment.yaml  frontend-deployment.yaml
(+54 files in other folders)
